[package]
name = "pdbwalker"
version = "0.1.0"
edition = "2024"
description = "Advanced PE binary scanner with PDB debug symbol detection and download capabilities"
repository = "https://github.com/19h/pdbwalker"
license = "MIT"

[dependencies]
exe = "0.5.6"
reqwest = { version = "0.12.24", features = ["blocking"] }
walkdir = "2.5.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
atty = "0.2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
